# projectmanager

./: LICENSE  README.md  setup.cfg
projectmanager/: __init__.py  __main__.py  cli.py  log.py  module1.py
projectmanager/commands/: newproject.py  subpackage.py
projectmanager/core/management/: __init__.py
projectmanager/templates/: utils.py
projectmanager/templates/project_template/: setup.cfg.tpl
projectmanager/templates/project_template/{project_name}/: {project_name}.py.tpl
projectmanager/templates/project_template/{{project_name}}/: __init__.py.tpl  manage.py.tpl  settings.py.tpl
projectmanager/templates/subpackage_template/{{subpackage_name}}/: main.py.tpl
