[metadata]
name = projectmanager
version = attr: projectmanager.__version__
author = Fredrik Hansson
author_email = fredda.hansson@gmail.com
description = A framework for managing python projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/Frallmeister/projectmanager
project_urls =
    Bug Tracker = https://https://github.com/Frallmeister/projectmanager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    projectmanager = projectmanager.core.management:read_command_line

[options.packages.find]
where = src